--- a/src/components/FoodDisplay/FoodDisplay.css
+++ b/src/components/FoodDisplay/FoodDisplay.css
@@ -1,18 +1,23 @@
 .food-display{
     margin-top: 30px;
+  
 
 }
 .food-display h2{
     font-size: max(2vw,24px);
-    font-weight: 600;
-    padding-left: 7%;
+    font-weight: 700;
+    margin-left: 11%;
 }
 .food-display-list{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
     margin-top: -60px;
-    gap: 30px;
+    gap: 50px;
     padding: 85px;
-    padding-left: 7%;
-    padding-right: 5%;
+   margin-left: 5%;
+    
+   margin-right: 5%;
+    
+   
+    
 }
