--- a/src/components/FoodItems/FoodItem.css
+++ b/src/components/FoodItems/FoodItem.css
@@ -1,17 +1,24 @@
 .food-item {
     width: 100%;
-    margin: auto;
     border-radius: 15px;
-    box-shadow: 0px 0px 10px #00000015;
+    box-shadow: 0px 0px 20px #00000015;
     transition: 0.3;
     animation: fadeIn 1s;
+  
+    
+    
+   
+    
+    
 }
 
 .food-item-image {
     width: 100%;
     border-radius: 15px 15px 0px 0px;
+    
+    
 }
-
+ 
 .food-item-info {
     padding: 20px;
 }
@@ -46,17 +53,28 @@
 
 .food-item-img-container {
     position: relative;
+    
 }
 
 .add {
     position: absolute;
-    width: 35px;
+    width: 55px;
     bottom: 15px;
     right: 15px;
     cursor: pointer;
-    border-radius: 50%;
+    border-radius:5% ;
+    transition: 0.2s ease-in-out;
+
 
 }
+.add:hover{
+    transform: scale(1.05);
+    width: 60px;
+    
+  
+  
+}
+ 
 
 .food-item-counter {
     position: absolute;
@@ -66,7 +84,7 @@
     display: flex;
     gap: 10px;
     padding: 6px;
-    border-radius: 52%;
+    border-radius: 50%;
     align-items: center;
     
     
