--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,7 +10,7 @@
 .heading{
     animation: fadeIn 3s;
 }
-/* @media(max-width:1050px){
+@media(max-width:1050px){
     .header{
         height: 38vw;
     }
@@ -26,6 +26,39 @@
         display: none;
     }
     .header-contents button {
-        padding: 2vw 4vw ;
+        padding: 2vw 3vw ;
+        padding-top: 10px;
     }
-} */
+}
+.header{
+    height: 34vw;
+    margin: 30px auto;
+    background: url('D:\react_projects\Food-Website\src\assets\header_img.png')no-repeat;
+    background-size: contain ;
+    position: relative;
+    margin-left: 11%;
+    margin-right: 11%;
+
+}
+.header-contents{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 1.5vw;
+    max-width: 50%;
+    bottom: 11%;
+    margin-left: 6vw;
+    animation: fadeIn 3s;
+}
+.header-contents h2{
+    font-weight: 550;
+    color: white;
+    font-size: max(4vw,20px);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+
+}
+.header-contents p{
+    color: white;
+    font-size: 1vw;
+}
