--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,13 +31,15 @@
     }
 }
 .header{
-    height: 34vw;
+    height: 37vw;
     margin: 30px auto;
-    background: url('D:\react_projects\Food-Website\src\assets\header_img.png')no-repeat;
+    background: url('D:\react_projects\Food-Website\src\assets\hero4.png')no-repeat;
     background-size: contain ;
     position: relative;
+    background-size: cover;
     margin-left: 11%;
     margin-right: 11%;
+  
 
 }
 .header-contents{
@@ -52,13 +54,16 @@
     animation: fadeIn 3s;
 }
 .header-contents h2{
-    font-weight: 550;
-    color: white;
-    font-size: max(4vw,20px);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.821);
+    font-size: max(4vw,40px);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
+    
 
 }
 .header-contents p{
-    color: white;
+    color: #000000d1;
     font-size: 1vw;
+    margin-bottom: 40px;
 }
