--- a/src/components/LoginPopup/LoginPopup.css
+++ b/src/components/LoginPopup/LoginPopup.css
@@ -3,14 +3,15 @@
     z-index: 3;
     width: 100%;
     height: 100%;
-    background-color: #00000090;
+ 
     display: grid;
+ 
 
 }
 .login-popup-container{
     place-self: center;
     width: max(23vw,330px);
-    color:#808080 ;
+    color:#000000 ;
     background-color:white ;
     display: flex;
     flex-direction: column;
@@ -19,6 +20,9 @@
    border-radius: 14px;
    font-size:14px ;
    animation: fadeIn 0.5s;
+   margin-top: 10rem;
+   margin-right: 10rem;
+   background-color: #00000090;
 }
 .login-popup-title{
     display: flex;
